--- a/stage6-1.html
+++ b/stage6-1.html
@@ -64,6 +64,11 @@
       </div>
     </div>
 
+    <!-- dot display -->
+    <div id="dotDisplay" class="dot-display">
+      <div class="dot"></div>
+    </div>
+
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
       <div class="read-info">
