--- a/stage2-2.html
+++ b/stage2-2.html
@@ -18,12 +18,12 @@
   <link rel="stylesheet" href="./css/stage.css">
 </head>
 
-<body>
+<body class='bg-2'>
     <!-- background bottom image -->
-    <div class="bg-bottom">
+    <!-- <div class="bg-bottom">
         <img src="./img/bg/bg_bottom4.svg">
-    </div>
-    
+    </div> -->
+
     <!-- information icon on the top right -->
     <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
