--- a/stage3-2.html
+++ b/stage3-2.html
@@ -18,11 +18,7 @@
   <link rel="stylesheet" href="./css/stage.css">
 </head>
 
-<body>
-    <!-- background bottom image -->
-    <div class="bg-bottom">
-        <img src="./img/bg/bg_bottom4.svg">
-    </div>
+<body class='bg-2'>
 
     <!-- information icon on the top right -->
     <div class="info sml-shadow">
@@ -73,7 +69,6 @@
   <script src="./js/stage.js"></script>
   <script>
       $("#hint").click(function() {
-        console.log("clicked");
         $('#hintOverlay').css({display: "block"});
       });
   </script>
