--- a/stage6-1.html
+++ b/stage6-1.html
@@ -18,11 +18,9 @@
   <link rel="stylesheet" href="./css/stage.css">
 </head>
 
-<body>
+<body class='bg-2'>
     <!-- background bottom image -->
-    <div class="bg-bottom">
-        <img src="./img/bg/bg_bottom4.svg">
-    </div>
+
 
     <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
@@ -55,7 +53,7 @@
       <div class="overlay-content danger-overlay">
         <div class="read-info">
           <p>어딜가려구,</p>
-          <p>우리가 정말 수순히 보내줄 줄 알았어?</p>
+          <p>우리가 정말 순순히 보내줄 줄 알았어?</p>
           <p>(퍽)</p>
         </div>
         <!-- <img class='stage-img' src="./img/stage4/sta-4-2.png" alt=""> -->
