--- a/stage4-1.html
+++ b/stage4-1.html
@@ -18,11 +18,11 @@
   <link rel="stylesheet" href="./css/stage.css">
 </head>
 
-<body>
+<body class='bg-2'>
     <!-- background bottom image -->
-    <div class="bg-bottom">
+    <!-- <div class="bg-bottom">
         <img src="./img/bg/bg_bottom4.svg">
-    </div>
+    </div> -->
     <!-- <div class="bg-middle">
       <img src="./img/clip/stage1_middle.svg" alt="">
     </div> -->
