--- a/stage7-1.html
+++ b/stage7-1.html
@@ -1,1 +1,52 @@
-<h1>under construction</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <!-- bootstrap css -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- jquery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/5bf6cd29fd.js" crossorigin="anonymous"></script>
+
+  <title>루비팡의 모험</title>
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/stage.css">
+</head>
+
+<body class='bg-1 filter'>
+    <!-- information icon on the top right -->
+    <div class="info sml-shadow">
+      <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
+    </div>
+    <!-- information modal page -->
+    <div id="infoModal"></div>
+    <!-- main contents includes: logo, code text box, code input and next button -->
+    <div class="contents">
+      <div class="read-info grey-color">
+        <p>눈을 떠보니 변장이 풀린 채 어두컴컴한</p>
+        <p>해저 감옥에 감금되어 있다.</p>
+        <p>불법 노예들을 사고파는 악랄한 녀석들의</p>
+        <p>소행인 것 같다. 육지동물인 것을</p>
+        <p>들켜버렸으니, 분명 이 녀석들에게</p>
+        <p>나는 고가의 상품일 것이다.</p>
+        <br>
+        <p>주위의 물건을 이용하여 빨리</p>
+        <p>이곳을 탈출해야겠다.</p>
+        <br>
+        <p class="sml-font" style='color: #00FFFF;'>* 감옥이 그려진 큐브 상자 앞으로 가서 </p>
+        <p class="sml-font" style='color: #00FFFF;'>문제를 풀어보세요!</p>
+      </div>
+
+      <a class='next-button' href="stage7-2.html">
+        <img src="./img/icon/icon_play.svg" alt="">
+      </a>
+    </div>
+  <script src="./js/info.js"></script>
+</body>
+
+</html>
