stage 7 and stage 8

--- a/stage8-2.html
+++ b/stage8-2.html
@@ -41,21 +41,22 @@
           <img src="./img/bg/bg_hinticon.svg" alt="">
         </div>
         <div class="box-description box-center">
-          <p>고기를 천지인 키패드에 입력하여</p>
-          <p>숫자로 변환한 값입니다.</p>
+          <p>알파벳순서대로 경로에 있는 방</p>
+          <p>(동서남북 순서)에 대한 개수를 각</p>
+          <p>더한 값을 나열해주세요.</p>
         </div>
       </div>
     </div>
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
       <div class="read-info grey-color">
-        <p>큐브상자 측면에 있는 이미지에서</p>
-        <p>단서를 얻어, 무억을 사용하여</p>
-        <p>탈출할 수 있을지 생각해보자!</p>
+        <p>안내도를 보고 물음표까지</p>
+        <p>가는 경로를 확인하세요!</p>
+        <p>동서남북 순서대로 정답을 입력해주세요.</p>
         <br>
       </div>
-
-      <input id="answer" index=6 oninput="this.value = this.value.toUpperCase();" type=number class="form-control answer-input" placeholder="정답 입력">
+      <img class='stage-img' src="./img/stage8/sta-8-3.png" alt="">
+      <input id="answer" index=7 oninput="this.value = this.value.toUpperCase();" type=number class="form-control answer-input" placeholder="정답 입력">
       <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
     </div>
   <script src="./js/info.js"></script>
