--- a/stage8-1.html
+++ b/stage8-1.html
@@ -18,48 +18,33 @@
   <link rel="stylesheet" href="./css/stage.css">
 </head>
 
-<body class='bg-2 filter'>
-
+<body class='bg-1 filter'>
     <!-- information icon on the top right -->
     <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
     <!-- information modal page -->
     <div id="infoModal"></div>
-
-    <!-- hint modal page -->
-    <div id="hintOverlay" class="overlay">
-      <div class="overlay-content hint-overlay">
-        <div class="close-btn">
-          <!-- x button &times -->
-          <a id='hintCloseBtn'><img src="./img/icon/icon_delete.svg" alt=""></a>
-        </div>
-        <div class="img-top-hint">
-          <img src="./img/icon/icon_hint.svg" alt="">
-        </div>
-        <div class="img-bottom-hint">
-          <img src="./img/bg/bg_hinticon.svg" alt="">
-        </div>
-        <div class="box-description box-center">
-          <p>고기를 천지인 키패드에 입력하여</p>
-          <p>숫자로 변환한 값입니다.</p>
-        </div>
-      </div>
-    </div>
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
+      <img class='stage-img-right' src="./img/stage8/sta-8-1.png" alt="">
+      <img class='stage-img-left' src="./img/stage8/sta-8-2.png" alt="">
       <div class="read-info grey-color">
-        <p>큐브상자 측면에 있는 이미지에서</p>
-        <p>단서를 얻어, 무억을 사용하여</p>
-        <p>탈출할 수 있을지 생각해보자!</p>
+
+        <p>생명의 정수에 관한 대화가 얼핏 들린다.</p>
+        <p>경매장 비밀의 방에 보관되어 있다니!</p>
         <br>
+        <br>
+        <p>우선 이곳 경매장 지하에 붙어있는</p>
+        <p>안내도를 보고 비밀의 방으로 추정되는</p>
+        <p>장소로 이동하자!</p>
       </div>
 
-      <input id="answer" index=6 oninput="this.value = this.value.toUpperCase();" type=number class="form-control answer-input" placeholder="정답 입력">
-      <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
+      <a class='next-button' href="stage8-2.html">
+        <img src="./img/icon/icon_play.svg" alt="">
+      </a>
     </div>
   <script src="./js/info.js"></script>
-  <script src="./js/stage.js"></script>
 </body>
 
 </html>
