--- a/stage9-2.html
+++ b/stage9-2.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="./css/stage.css">
 </head>
 
-<body class='bg-1 filter-g'>
+<body class='bg-1'>
     <!-- information icon on the top right -->
     <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
@@ -27,15 +27,14 @@
     <div id="infoModal"></div>
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
-      <div class="read-info grey-color">
-
-        <p>이곳이 목적지인 것 같은데 ...</p>
-        <p>앗, 저게 뭐지?</p>
+      <div class="read-info">
+        <p>비밀의 방에 도착해서</p>
+        <p><a style="font-size: 1.3em; color: #008080">생명의 정수</a>를 얻엇다!</p>
         <br>
         <br>
       </div>
-      <img class='stage-img sml-shadow' src="./img/stage9/sta-9-1.png" alt="">
-      <a class='next-button' href="stage9-2.html">
+      <img class='stage-img sml-shadow' src="./img/stage9/sta-9-2.png" alt="">
+      <a class='next-button' href="stage9-3.html">
         <img src="./img/icon/icon_play.svg" alt="">
       </a>
     </div>
