--- a/stage9-3.html
+++ b/stage9-3.html
@@ -38,8 +38,14 @@
       <img class='stage-img-sml' src="./img/stage9/sta-9-3.png" alt="">
       <a href="stage-end1.html" style='display: block'>
         <div class="end-container">
-          <img src="./img/stage_end/ending-btn.png" style="width:min(80vw,20em);">
+          <img src="./img/stage_end/ending-btn.png" style="width:min(90vw,23em);">
           <div class='end-button'><a style='color: #cc66ff'>엔딩1:</a>생명의 정수를 물에 뿌린다.</div>
+        </div>
+      </a>
+      <a href="stage-end2.html" style='display: block'>
+        <div class="end-container">
+          <img src="./img/stage_end/ending-btn.png" style="width:min(90vw,23em);">
+          <div class='end-button'><a style='color: #cc66ff'>엔딩1:</a>훔친 생명의 정수를 엄마 코끼에게 가져간다</div>
         </div>
       </a>
 
