stage 9, ending 1 and 2, credit

--- a/stage-credit.html
+++ b/stage-credit.html
@@ -28,21 +28,21 @@
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
       <div class="read-info">
-        <p>엔딩1: 훔친 생명의 정수를</p>
-        <p>엄마 토끼에게 가져간다</p>
+        <p>제작: 주식회사 시티서커스</p>
         <br>
+        <p>제작총괄: 로이</p>
+        <br>
+        <p>기획: 쑥꾹</p>
+        <br>
+        <p>연출: 이신</p>
+        <br>
+        <p>기술: 떼구루루, SH, Bin, 펩시</p>
         <br>
         <br>
         <br>
       </div>
-      <img class='stage-img' src="./img/stage_end/ending-2.png" alt="">
-      <!-- two ending buttons -->
-      <a href="stage-credit.html">
-        <div class="end-container">
-          <img src="./img/stage_end/ending-btn.png" >
-          <div class='mission-clear-button'><span style='color: white'>MISSION CLEAR</span></div>
-        </div>
-      </a>
+      <!-- <img class='stage-img' src="./img/stage_end/ending-2.png" alt=""> -->
+
 
   <script src="./js/info.js"></script>
 </body>
