--- a/stage9-3.html
+++ b/stage9-3.html
@@ -36,22 +36,19 @@
         <p>엄마의 병을 고치러 달려갈까...</p>
       </div>
       <img class='stage-img-sml' src="./img/stage9/sta-9-3.png" alt="">
-      <a href="stage-end1.html" style='display: block'>
+      <!-- two ending buttons -->
+      <a href="stage-end1.html">
         <div class="end-container">
-          <img src="./img/stage_end/ending-btn.png" style="width:min(90vw,23em);">
-          <div class='end-button'><a style='color: #cc66ff'>엔딩1:</a>생명의 정수를 물에 뿌린다.</div>
+          <img src="./img/stage_end/ending-btn.png" >
+          <div class='end-button'><span style='color: #cc66ff'>엔딩1:</span>생명의 정수를 물에 뿌린다.</div>
         </div>
       </a>
-      <a href="stage-end2.html" style='display: block'>
+      <a href="stage-end2.html">
         <div class="end-container">
-          <img src="./img/stage_end/ending-btn.png" style="width:min(90vw,23em);">
-          <div class='end-button'><a style='color: #cc66ff'>엔딩1:</a>훔친 생명의 정수를 엄마 코끼에게 가져간다</div>
+          <img src="./img/stage_end/ending-btn.png">
+          <div class='end-button'><span style='color: #cc66ff'>엔딩2:</span>훔친 생명의 정수를 엄마 토끼에게 가져간다</div>
         </div>
       </a>
-
-      <!-- <a href="stage9-3.html">
-        <img src="./img/stage_end/ending-btn.png" alt="">
-      </a> -->
     </div>
   <script src="./js/info.js"></script>
 </body>
