--- a/stage6-1.html
+++ b/stage6-1.html
@@ -51,8 +51,8 @@
     <!-- danger modal page -->
     <div id="dangerOverlay" class="overlay">
       <div class="overlay-content danger-overlay">
-        <div class="read-info">
-          <p>어딜가려구,</p>
+        <div class="read-info" style='color: red'>
+          <p >어딜가려구,</p>
           <p>우리가 정말 순순히 보내줄 줄 알았어?</p>
           <p>(퍽)</p>
         </div>
