modification on info icon

--- a/index.html
+++ b/index.html
@@ -33,15 +33,18 @@ Main page of 루비팡의 모험
       </div>
     </div>
     <!-- information icon on the top right -->
-    <div class="info sml-shadow">
+    <!-- <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
-    </div>
+    </div> -->
     <!-- information modal page -->
     <div id="infoModal"></div>
 
 
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
+      <div class="info sml-shadow">
+        <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
+      </div>
       <img class='logo-image' src="./img/logo.svg" alt="">
       <div class='shade-text-box'><p>코드를 입력하세요</p></div>
       <input type="password" class="form-control code-text-input" id="codeInput" inputmode="numeric" placeholder="코드">
