--- a/stage1-1.html
+++ b/stage1-1.html
@@ -24,13 +24,16 @@
         <img src="./img/bg/bg_bottom5.svg">
     </div> -->
     <!-- information icon on the top right -->
-    <div class="info sml-shadow">
+    <!-- <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
-    </div>
+    </div> -->
     <!-- information modal page -->
     <div id="infoModal"></div>
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
+      <div class="info sml-shadow">
+        <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
+      </div>
       <div class="read-info">
       <p>내가 엄마를 위해</p>
       <p>할 수 있는 일이 없을까..?</p>
