scroll to hide address bar

--- a/stage2-2.html
+++ b/stage2-2.html
@@ -41,7 +41,7 @@
         <div class="img-bottom-hint">
           <img src="./img/bg/bg_hinticon.svg" alt="">
         </div>
-        <div class="box-description">
+        <div class="box-description box-center">
           <p>별주부전엔 거북이가 아닌</p>
           <p>자라가 나와요 !</p>
           <br>
