--- a/stage3-2.html
+++ b/stage3-2.html
@@ -37,7 +37,7 @@
         <div class="img-bottom-hint">
           <img src="./img/bg/bg_hinticon.svg" alt="">
         </div>
-        <div class="box-description">
+        <div class="box-description box-center">
           <p>별의 '710-17'이 의미하는 것은</p>
           <p>별의 '기억'입니다.</p>
         </div>
