--- a/stage2-1.html
+++ b/stage2-1.html
@@ -42,9 +42,11 @@
       <p>바다생물로 변장하는 도구를 찾아</p>
       <p>용궁행 급행열차를 타야겠다.</p>
       </div>
-      <a class='next-button' href="stage2-2.html">
-        <img src="./img/icon/icon_play.svg" alt="">
-      </a>
+      <div class="answer-box">
+        <a class='next-button' href="stage2-2.html">
+          <img src="./img/icon/icon_play.svg" alt="">
+        </a>
+      </div>
     </div>
   <script src="./js/info.js"></script>
 </body>
