--- a/stage2-2.html
+++ b/stage2-2.html
@@ -69,8 +69,10 @@
       </ol>
 
       </div>
+      <div class="answer-box">
         <input id="answer" index=1 type="number" class="form-control answer-input" placeholder="정답 입력">
-        <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
+        <img id="codeBtn" class='next-button-answer' src="./img/icon/icon_play.svg" alt="">
+      </div>
     </div>
   <script src="./js/info.js"></script>
   <script src="./js/stage.js"></script>
