--- a/stage3-2.html
+++ b/stage3-2.html
@@ -64,7 +64,9 @@
       <a id="hint" href="#">힌트</a>
       <a id="answer" index=2></a>
       <!-- <input id="answer" value=2 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력"> -->
-      <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
+      <div class="answer-box">
+        <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
+      </div>
     </div>
   <script src="./js/info.js"></script>
   <script src="./js/stage.js"></script>
