--- a/stage5-1.html
+++ b/stage5-1.html
@@ -68,8 +68,10 @@
         <p class="sml-font" style='color: red;'>물체의 명칭을 알아맞춰보세요. </p>
       </div>
       <br>
+      <div class="answer-box">
       <input id="answer" index=4 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력">
-      <img id="codeBtn" class='next-button' src="./img/icon/icon_play.svg" alt="">
+      <img id="codeBtn" class='next-button-answer' src="./img/icon/icon_play.svg" alt="">
+    </div>
     </div>
   <script src="./js/info.js"></script>
   <script src="./js/stage.js"></script>
