--- a/stage6-1.html
+++ b/stage6-1.html
@@ -78,9 +78,11 @@
         <br>
       </div>
       <br>
-      <input id="answer" index=5 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력">
-      <img  id="codeBtn" class='next-button' src="./img/icon/icon_play.svg" alt="">
-      <!-- <img id="codeBtn" class='next-button' src="./img/icon/icon_play.svg" alt=""> -->
+      <div class="answer-box">
+        <input id="answer" index=5 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력">
+        <img  id="codeBtn" class='next-button-answer' src="./img/icon/icon_play.svg" alt="">
+        <!-- <img id="codeBtn" class='next-button' src="./img/icon/icon_play.svg" alt=""> -->
+      </div>
     </div>
   <script src="./js/info.js"></script>
   <script src="./js/stage.js"></script>
