--- a/stage7-2.html
+++ b/stage7-2.html
@@ -55,9 +55,10 @@
         <p>탈출할 수 있을지 생각해보자!</p>
         <br>
       </div>
-
-      <input id="answer" index=6 oninput="this.value = this.value.toUpperCase();" type=number class="form-control answer-input" placeholder="정답 입력">
-      <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
+      <div class="answer-box">
+        <input id="answer" index=6 oninput="this.value = this.value.toUpperCase();" type=number class="form-control answer-input" placeholder="정답 입력">
+        <img id="codeBtn" class='next-button-answer' src="./img/icon/icon_play.svg" alt="">
+      </div>
     </div>
   <script src="./js/info.js"></script>
   <script src="./js/stage.js"></script>
