--- a/stage8-1.html
+++ b/stage8-1.html
@@ -40,10 +40,11 @@
         <p>안내도를 보고 비밀의 방으로 추정되는</p>
         <p>장소로 이동하자!</p>
       </div>
-
-      <a class='next-button' href="stage8-2.html">
-        <img src="./img/icon/icon_play.svg" alt="">
-      </a>
+      <div class="answer-box">
+        <a class='next-button' href="stage8-2.html">
+          <img src="./img/icon/icon_play.svg" alt="">
+        </a>
+      </div>
     </div>
   <script src="./js/info.js"></script>
 </body>
