--- a/stage8-2.html
+++ b/stage8-2.html
@@ -57,8 +57,10 @@
         <br>
       </div>
       <img class='stage-img' src="./img/stage8/sta-8-3.png" alt="">
+      <div class="answer-box">
       <input id="answer" index=7 oninput="this.value = this.value.toUpperCase();" type=number class="form-control answer-input" placeholder="정답 입력">
-      <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
+      <img id="codeBtn" class='next-button-answer' src="./img/icon/icon_play.svg" alt="">
+    </div>
     </div>
   <script src="./js/info.js"></script>
   <script src="./js/stage.js"></script>
