--- a/stage9-1.html
+++ b/stage9-1.html
@@ -36,9 +36,11 @@
         <br>
       </div>
       <img class='stage-img sml-shadow' src="./img/stage9/sta-9-1.png" alt="">
+      <div class="answer-box">
       <a class='next-button' href="stage9-2.html">
         <img src="./img/icon/icon_play.svg" alt="">
       </a>
+    </div>
     </div>
   <script src="./js/info.js"></script>
 </body>
