--- a/stage9-3.html
+++ b/stage9-3.html
@@ -38,6 +38,7 @@
       </div>
       <img class='stage-img-sml' src="./img/stage9/sta-9-3.png" alt="">
       <!-- two ending buttons -->
+      <div class="end-buttons">
       <a href="stage-end1.html">
         <div class="end-container">
           <img src="./img/stage_end/ending-btn.png" >
@@ -50,6 +51,7 @@
           <div class='end-button'><span style='color: #cc66ff'>엔딩2:</span>훔친 생명의 정수를 엄마 토끼에게 가져간다</div>
         </div>
       </a>
+    </div>
     </div>
   <script src="./js/info.js"></script>
 </body>
