--- a/stage3-1.html
+++ b/stage3-1.html
@@ -43,9 +43,11 @@
         <p>티켓을 훔쳐 오자.</p>
       </div>
       <img class='stage-img sml-shadow' src="./img/stage3/sta-3-1.png" alt="">
-      <a class='next-button' href="stage3-2.html">
-        <img src="./img/icon/icon_play.svg" alt="">
-      </a>
+      <div class="answer-box">
+        <a class='next-button' href="stage3-2.html">
+          <img src="./img/icon/icon_play.svg" alt="">
+        </a>
+      </div>
     </div>
   <script src="./js/info.js"></script>
 </body>
