--- a/stage4-1.html
+++ b/stage4-1.html
@@ -80,8 +80,10 @@
       </div>
       <img class='stage-img sml-shadow' src="./img/stage4/sta-4-1.png" alt="">
       <br>
-      <input id="answer" index=3 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력">
-      <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
+      <div class="answer-box">
+        <input id="answer" index=3 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력">
+        <img id="codeBtn" class='next-button-answer' src="./img/icon/icon_play.svg" alt="">
+      </div>
     </div>
   <script src="./js/info.js"></script>
   <script src="./js/stage.js"></script>
