--- a/stage7-1.html
+++ b/stage7-1.html
@@ -42,10 +42,11 @@
         <p class="sml-font" style='color: #00FFFF;'>* 감옥이 그려진 큐브 상자 앞으로 가서 </p>
         <p class="sml-font" style='color: #00FFFF;'>문제를 풀어보세요!</p>
       </div>
-
+      <div class="answer-box">
       <a class='next-button' href="stage7-2.html">
         <img src="./img/icon/icon_play.svg" alt="">
       </a>
+    </div>
     </div>
   <script src="./js/info.js"></script>
 </body>
