page 1 loading modal

--- a/stage1-2.html
+++ b/stage1-2.html
@@ -55,6 +55,15 @@
       </div>
     </div>
 
+    <!-- loading modal page -->
+    <div id="loadingOverlay" class="overlay">
+      <div class="overlay-content ticket-overlay">
+        <img src="./img/stage1/sta-1-2.gif" alt="">
+          <!-- <img class='stamp-ani' src="./img/stage4/sta-4-4.svg" alt=""> -->
+        <!-- <img id="ticketNextBtn" class='next-button button-loc' src="./img/icon/icon_play.svg" alt=""> -->
+      </div>
+    </div>
+
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
       <!-- information icon on the top right -->
@@ -78,7 +87,7 @@
       <p>조타륜과 항해일지의 단서를</p>
       <p>통해, 기타의 시동암호를 얻자.</p>
       </div>
-      <div class="answer-box ab-btm">
+      <div class="answer-box">
         <input id="answer" index=0 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력">
         <img id="codeBtn" class='next-button-answer' src="./img/icon/icon_play.svg" alt="">
       </div>
