stage 9 - 3 buttons resize

--- a/stage-end2.html
+++ b/stage-end2.html
@@ -41,7 +41,7 @@
       <div class="end-buttons">
       <a href="stage-credit.html">
         <div class="end-container">
-          <img src="./img/stage_end/ending-btn.png" >
+          <img class="img-button" src="./img/stage_end/ending-btn.png" >
           <div class='mission-clear-button'><span style='color: white'>MISSION CLEAR</span></div>
         </div>
       </a>
