--- a/stage-end1.html
+++ b/stage-end1.html
@@ -38,12 +38,13 @@
       <img class='stage-img' src="./img/stage_end/ending-1.png" alt="">
       <!-- two ending buttons -->
       <div class="end-buttons">
-      <a href="stage-credit.html">
-        <div class="end-container">
-          <img src="./img/stage_end/ending-btn.png" >
-          <div class='mission-clear-button'><span style='color: white'>MISSION CLEAR</span></div>
-        </div>
-      </a>
+        <a href="stage-credit.html">
+          <div class="end-container">
+            <img class="img-button" src="./img/stage_end/ending-btn.png" >
+            <div class='mission-clear-button'><span style='color: white'>MISSION CLEAR</span></div>
+          </div>
+        </a>
+      </div>
     </div>
 
   <script src="./js/info.js"></script>
