button stays on bottom and same position

--- a/stage1-1.html
+++ b/stage1-1.html
@@ -46,10 +46,12 @@
       </div>
       <img class='stage-img sml-shadow' src="./img/stage1/sta-1-1.png" alt="">
       <div class="answer-box">
-        <a class='next-button' href="stage1-2.html">
-          <img src="./img/icon/icon_play.svg" alt="">
+        <a href="stage1-2.html">
+          <img class='next-button' src="./img/icon/icon_play.svg" alt="">
         </a>
       </div>
+      <!-- <img class='next-button' src="./img/icon/icon_play.svg" alt=""> -->
+
     </div>
   <script src="./js/info.js"></script>
 </body>
