animated next button

--- a/common/info.html
+++ b/common/info.html
@@ -17,11 +17,11 @@
         </tr>
         <tr>
           <th>문의처 :</th>
-          <th><strong class='str'>email@citycircus.kr</strong></th>
+          <th><a href="mailto:email@citycircus.kr"><strong class='str'>email@citycircus.kr</strong></a></th>
         </tr>
         <tr>
           <th></th>
-          <th><strong class='str'>070-8885-8812</strong></th>
+          <th><a href="tel:07088858812"><strong class='str'>070-8885-8812</strong></a></th>
         </tr>
       </table>
     </div>
