--- a/stage1-2.html
+++ b/stage1-2.html
@@ -88,7 +88,7 @@
       </div>
       <div class="answer-box">
         <input id="answer" index=0 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력">
-        <img id="codeBtn" class='next-button-answer' src="./img/icon/icon_play.svg" alt="">
+        <img id="codeBtn" class='next-button-answer btn' src="./img/icon/icon_play.svg" alt="">
       </div>
 
     </div>
