--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Main page of 루비팡의 모험
       <img class='logo-image' src="./img/logo.svg" alt="">
       <div class='shade-text-box'><p>코드를 입력하세요</p></div>
       <input type="password" class="form-control code-text-input" id="codeInput" inputmode="numeric" placeholder="코드">
-      <a id="codeBtn" class='start-button '><img class='btn-shadow btn' src="./img/icon/icon_play.svg" alt=""></a>
+      <a id="codeBtn" class='start-button '><img class='btn-shadow' src="./img/icon/icon_play.svg" alt=""></a>
       <div id="codeError"></div>
     </div>
   <script src="./js/main.js"></script>
