--- a/start.html
+++ b/start.html
@@ -38,7 +38,7 @@
       <div class='shade-text-box'>
         <img src="./img/gamestart.png" alt="">
       </div>
-      <img id="startBtn" class='start-button btn' src="./img/icon/icon_play.svg" alt="">
+      <img id="startBtn" class='start-button' src="./img/icon/icon_play.svg" alt="">
     </div>
   <script src="./js/main.js"></script>
   <script src="./js/info.js"></script>
