button fix on safari

--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@ Main page of 루비팡의 모험
   <link rel="stylesheet" href="./css/start.css">
 </head>
 
-<body>
+<body ontouchstart>
   <!-- background bottom image -->
     <!-- background bottom image -->
     <div class="bg-container">
