--- a/stage3-2.html
+++ b/stage3-2.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="./css/stage.css">
 </head>
 
-<body class='bg-2'>
+<body ontouchstart class='bg-2'>
 
 
     <!-- information modal page -->
