--- a/stage9-1.html
+++ b/stage9-1.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="./css/stage.css">
 </head>
 
-<body class='bg-1 filter-g'>
+<body ontouchstart class='bg-1 filter-g'>
 
     <!-- information modal page -->
     <div id="infoModal"></div>
