--- a/stage-credit.html
+++ b/stage-credit.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="./css/stage.css">
 </head>
 
-<body class='bg-1'>
+<body ontouchstart class='bg-1'>
     <!-- information icon on the top right -->
 
     <!-- information modal page -->
