--- a/stage1-1.html
+++ b/stage1-1.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="./css/stage.css">
 </head>
 
-<body class='bg-1'>
+<body ontouchstart class='bg-1'>
     <!-- information modal page -->
     <div id="infoModal"></div>
     <!-- main contents includes: logo, code text box, code input and next button -->
