--- a/stage2-1.html
+++ b/stage2-1.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="./css/stage.css">
 </head>
 
-<body class='bg-1'>
+<body ontouchstart class='bg-1'>
     <!-- background bottom image -->
     <!-- <div class="bg-bottom">
         <img src="./img/bg/bg_bottom5.svg">
