--- a/stage2-2.html
+++ b/stage2-2.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="./css/stage.css">
 </head>
 
-<body class='bg-2'>
+<body ontouchstart class='bg-2'>
     <!-- background bottom image -->
     <!-- <div class="bg-bottom">
         <img src="./img/bg/bg_bottom4.svg">
