--- a/stage7-2.html
+++ b/stage7-2.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="./css/stage.css">
 </head>
 
-<body class='bg-2 filter'>
+<body ontouchstart class='bg-2 filter'>
 
 
     <!-- information modal page -->
