--- a/stage8-1.html
+++ b/stage8-1.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="./css/stage.css">
 </head>
 
-<body class='bg-1 filter'>
+<body ontouchstart class='bg-1 filter'>
 
     <!-- information modal page -->
     <div id="infoModal"></div>
