--- a/start.html
+++ b/start.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/start.css">
 </head>
-<body>
+<body ontouchstart>
     <!-- background bottom image -->
     <div class="bg-container">
       <div class="bg-box">
