--- a/stage3-2.html
+++ b/stage3-2.html
@@ -50,8 +50,8 @@
         <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
       </div>
       <div class="read-info">
-        <p>놓인 책들 중 아래 그림에 해당되는 책을</p>
-        <p>유심히 살펴본후, 네모칸에 들어갈</p>
+        <p>놓인 책들 중 아래 그림에 해당되는</p>
+        <p>책을 유심히 살펴본후, 네모칸에 들어갈</p>
         <p>알맞은 문구를 입력해 주세요.</p>
         <br>
         <p class="sml-font" style='color: red;'>* 이번 문제는 하단 링트에 연결된 페이지 </p>
