--- a/stage5-1.html
+++ b/stage5-1.html
@@ -54,9 +54,9 @@
         <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
       </div>
       <div class="read-info">
-        <p>기차에서 내려 생명의 정수가 있을 곳을</p>
-        <p>탐색하던 도중, 골목길에서 돌연변이 바다</p>
-        <p>생물들이 내 앞을 막아서며 말했다.</p>
+        <p>기차에서 내려 생명의 정수가 있을 </p>
+        <p>곳을 탐색하던 도중, 골목길에서 돌연변이 </p>
+        <p>바다 생물들이 내 앞을 막아서며 말했다.</p>
         <br>
         <p>-<p>
         <p>"우리가 내는 문제를 풀어야 이곳을</p>
