--- a/stage7-1.html
+++ b/stage7-1.html
@@ -29,8 +29,8 @@
         <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
       </div>
       <div class="read-info grey-color">
-        <p>눈을 떠보니 변장이 풀린 채 어두컴컴한</p>
-        <p>해저 감옥에 감금되어 있다.</p>
+        <p>눈을 떠보니 변장이 풀린 채 </p>
+        <p>어두컴컴한 해저 감옥에 감금되어 있다.</p>
         <p>불법 노예들을 사고파는 악랄한 녀석들의</p>
         <p>소행인 것 같다. 육지동물인 것을</p>
         <p>들켜버렸으니, 분명 이 녀석들에게</p>
