--- a/stage3-2.html
+++ b/stage3-2.html
@@ -61,9 +61,12 @@
 
       </div>
       <img class='stage-img sml-shadow' src="./img/stage3/sta-3-2.png" alt="">
-      <a href="http://dev.sherlock-holmes.co.kr/test_city_circus.heitu">연결된 페이지</a>
-      <a id="hint" href="#">힌트</a>
-      <a id="answer" index=2></a>
+      <div>
+        <a href="http://dev.sherlock-holmes.co.kr/test_city_circus.heitu">연결된 페이지</a>
+        <a id="answer" index=2>/</a>
+        <a id="hint" href="#">힌트</a>
+      </div>
+
       <!-- <input id="answer" value=2 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력"> -->
       <div class="answer-box">
         <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
