clear up from index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
 authur don kim
-updated date Dec 9th 2021
+updated date Dec 9th 2021 to March 23rd 2022
 Main page of 루비팡의 모험
 -->
 
@@ -25,20 +25,16 @@ Main page of 루비팡의 모험
 </head>
 
 <body ontouchstart>
-  <!-- background bottom image -->
+
     <!-- background bottom image -->
     <div class="bg-container">
       <div class="bg-box">
         <img src="./img/bg1_bottom.svg">
       </div>
     </div>
-    <!-- information icon on the top right -->
-    <!-- <div class="info sml-shadow">
-      <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
-    </div> -->
+
     <!-- information modal page -->
     <div id="infoModal"></div>
-
 
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
@@ -48,7 +44,7 @@ Main page of 루비팡의 모험
       <img class='logo-image' src="./img/logo.svg" alt="">
       <div class='shade-text-box'><p>코드를 입력하세요</p></div>
       <input type="password" class="form-control code-text-input" id="codeInput" inputmode="numeric" placeholder="코드">
-      <a id="codeBtn" class='start-button '><img class='btn-shadow' src="./img/icon/icon_play.svg" alt=""></a>
+      <a id="codeBtn" class='start-button'><img class='btn-shadow' src="./img/icon/icon_play.svg" alt=""></a>
       <div id="codeError"></div>
     </div>
   <script src="./js/main.js"></script>
