--- a/index.html
+++ b/index.html
@@ -26,27 +26,29 @@ Main page of 루비팡의 모험
 
 <body ontouchstart>
 
-    <!-- background bottom image -->
-    <div class="bg-container">
-      <div class="bg-box">
-        <img src="./img/bg1_bottom.svg">
-      </div>
+  <!-- background bottom image -->
+  <div class="bg-container">
+    <div class="bg-box">
+      <img src="./img/bg1_bottom.svg">
     </div>
+  </div>
 
-    <!-- information modal page -->
-    <div id="infoModal"></div>
+  <!-- information modal page -->
+  <div id="infoModal"></div>
 
-    <!-- main contents includes: logo, code text box, code input and next button -->
-    <div class="contents">
-      <div class="info sml-shadow">
-        <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
-      </div>
-      <img class='logo-image' src="./img/logo.svg" alt="">
-      <div class='shade-text-box'><p>코드를 입력하세요</p></div>
-      <input type="password" class="form-control code-text-input" id="codeInput" inputmode="numeric" placeholder="코드">
-      <a id="codeBtn" class='start-button'><img class='btn-shadow' src="./img/icon/icon_play.svg" alt=""></a>
-      <div id="codeError"></div>
+  <!-- main contents includes: logo, code text box, code input and next button -->
+  <div class="contents">
+    <div class="info sml-shadow">
+      <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
+    <img class='logo-image' src="./img/logo.svg" alt="">
+    <div class='shade-text-box'>
+      <p>코드를 입력하세요</p>
+    </div>
+    <input type="password" class="form-control code-text-input" id="codeInput" inputmode="numeric" placeholder="코드">
+    <a id="codeBtn" class='start-button'><img class='btn-shadow' src="./img/icon/icon_play.svg" alt=""></a>
+    <div id="codeError"></div>
+  </div>
   <script src="./js/main.js"></script>
   <script src="./js/info.js"></script>
 </body>
